src/plugins/screenshot/screenshotdbusinterface2.cpp
@@ -250,7 +250,7 @@ QVariantMap ScreenShotDBusInterface2::CaptureActiveWindow(const QVariantMap &opt
         return QVariantMap();
     }
 
-    Window *window = workspace()->activeWindow();
+    Window *window = workspace()->mostRecentlyActivatedWindow();
     if (!window) {
         sendErrorReply(s_errorNoActiveWindow, s_errorNoActiveWindowMessage);
         return QVariantMap();
